hphp/test/quick/method-non-object2.php.expectf

Fatal error: Uncaught exception 'BadMethodCallException' with message 'Call to a member function bar() on a non-object (integer)' in %s/test/quick/method-non-object2.php:5
Stack trace:
#0 {main}
